Testcases/neg/test01.jl
# division returns float
function main()
a::Integer = 10-21/2
println(a)
end
main()
